# QEARIS---Quantum-Enhanced-Adaptive-Research-Intelligence-System

./: .dockerignore  .env.example  Core Files readme.md  LICENSE  README.md  Repository Structure  WRITEUP.md  docker-compose.yml  dockerfile  pyproject.toml  repository-checklist.sh  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml  release.yml
deployment/cloud_run/: cloudbuild-docker.yaml  cloudbuild.yaml  deploy.sh
deployment/kubernetes/: deployment.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
examples/: advanced_workflow.py  simple_research.py
notebooks/: qearis_demo.ipynb
rc/api/: routes.py
scripts/: deploy_cloud_run.sh  deploy_docker_manual.sh  setup.sh  test_local.sh
src/: __init__.py  config.py
src/agents/: __init__.py  base_agent.py  base_llm_agent.py  gemini_agent.py  init.py  loop_synthesis_agent.py  parallel_research_agent.py  quantum_coordinator_agent.py  research_agent.py  sequential_validator_agent.py  synthesis_agent.py  validation_agent.py
src/api/: main.py  models.py  routes.py  schemas.py
src/core/: __init__.py  context_manager.py  mcp_server.py  memory_bank.py  quantum_optimizer.py  rag_system.py
src/deployment/: __init__.py  cloud_run.py
src/evaluation/: __init__.py  agent_evaluator.py
src/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/orchestrator/: __init__.py  init.py  multi_agent_orchestrator.py  task_models.py
src/protocols/: __init__.py  a2a_protocol.py
src/services/: __init__.py  task_manager.py  (+1 more)
tests/: test_agents.py  test_orchestrator.py  test_quantum_optimizer.py
(+4 files in other folders)
